# sweep-sdk-cpp

./: .travis.yml  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  example.cc
include/sweep/: stypes.h  sweep.h  sweep_driver.h  sweep_protocol.h  util.h
include/sweep/serial/: serial.h
include/sweep/serial/arch/: unix.h  win.h
src/: example.cc  sweep_driver.cc  util.cc
src/serial/: serial.cc
src/serial/arch/: unix.cc  win.cc
